fix: navbar dropdown not accessible on mobile
I need spacing between elements & larger text
otherwise its hard to click

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -819,9 +819,20 @@ div.highlighter-rouge {
   width: max-content;
   max-width: 90vw;
   list-style-type: none;
+}
+
+.navbar-dropdown > ul > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
+.navbar-dropdown > ul {
   --tw-bg-opacity: 1;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
   padding: 0.5rem;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
